--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-async-handler": "^1.2.0",
     "firebase": "^9.19.1",
     "gridfs-stream": "^1.1.1",
+    "js-cookie": "^3.0.1",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.0.3",
